# GeometriaComputacional

tarefa0/: .gitignore  Cargo.toml
tarefa0/assets/shaders/grid/: vertex.glsl
tarefa0/assets/shaders/light/: fragment.glsl
tarefa0/assets/shaders/raytracing/: raytracing.comp
tarefa0/assets/shaders/triangle/: fragment.glsl  vertex.glsl
tarefa0/src/: main.rs
tarefa0/src/lights/: light.rs  point_light.rs
tarefa0/src/objects/: mod.rs  object.rs
tarefa0/src/objects/geometry/: mod.rs  points_cloud.rs
tarefa0/src/objects/gizmo/: gizmo.rs  mod.rs  translate.rs
tarefa0/src/objects/grid/: axes.rs  grid.rs  mod.rs  rings.rs
tarefa0/src/objects/mesh/: mesh.rs
tarefa0/src/objects/primitives/: cone.rs  cube.rs  cylinder.rs  mod.rs  sphere.rs
tarefa0/src/objects/primitives/planes/: ring.rs  square.rs
tarefa0/src/opengl/: ebo.rs  fbo.rs  mod.rs  program.rs  renderer.rs  shader.rs  shaders.rs  vao.rs  vbo.rs
tarefa0/src/scene/: events.rs  mod.rs  scene.rs  window.rs
tarefa0/src/scene/ui/: light_ui.rs  mod.rs  object_ui.rs  ui.rs
tarefa0/src/utils/: camera.rs  core.rs  material.rs  mod.rs  ray.rs  transform.rs  vector.rs
tarefa01/: Cargo.toml  plot_bench.py
tarefa01/benches/: mod.rs  sort_benchmark.rs
tarefa01/src/: lib.rs  main.rs
tarefa01/src/geo/: polygon.rs
tarefa01/src/math/: mod.rs  vec3.rs  vec_macros.rs
tarefa01/src/sort/: merge_sort.rs  mod.rs  quick_sort.rs  selection_sort.rs
