[package]
name = "ModelagemGeometrica"
version = "0.1.0"
edition = "2024"

[dependencies]
gl = "0.14.0"
egui = "0.32.3"
egui_sdl2_gl = "0.32.0"
bytemuck = "1.24.0"
glam = { version = "0.31.0", features = ["serde"] }
image = "0.25.9"
sdl2 = { version = "0.37.0", features = ["bundled"] }
uuid = { version = "1.19.0", features = ["v4"] }
tobj = "4.0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rfd = "0.17.2"
parry3d = "0.26.0"
